<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Habit Name -->
    <EditText
        android:id="@+id/habitNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/habit_name_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Habit Explanation -->
    <EditText
        android:id="@+id/habitExplanationEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/habit_explanation_hint"
        app:layout_constraintTop_toBottomOf="@id/habitNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Start Date -->
    <EditText
        android:id="@+id/startDateEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/start_date_hint"
        android:focusable="false"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/habitExplanationEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Reminder Time -->
    <EditText
        android:id="@+id/reminderTimeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_time_hint"
        android:focusable="false"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/startDateEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Category Spinner -->
    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/habit_categories"
        app:layout_constraintTop_toBottomOf="@id/reminderTimeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Frequency Spinner -->
    <Spinner
        android:id="@+id/frequencySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/frequency_options"
        app:layout_constraintTop_toBottomOf="@id/categorySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Duration Input -->
    <EditText
        android:id="@+id/durationEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/duration_hint"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/frequencySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Save Habit Button -->
    <Button
        android:id="@+id/saveHabitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_habit_button_text"
        app:layout_constraintTop_toBottomOf="@id/durationEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
